# bsc

./: Cargo.toml  README.md
compose/: .env  docker-compose.yml
crates/cli/: Cargo.toml  README.md
crates/cli/src/: main.rs
crates/lib/: Cargo.toml
crates/lib/src/: beanstalk.rs  error.rs  lib.rs  stats.rs
src/: main.rs  utils.rs
src/cmd/: get.rs  put.rs
src/lib/: mod.rs
workspace/cli/: Cargo.toml
workspace/cli/src/: beanstalk.rs  cmd.rs  main.rs
workspace/cli/src/cmd/: get.rs  put.rs
workspace/core/: Cargo.toml
workspace/core/src/: client.rs  lib.rs  parser.rs  protocol.rs  types.rs  yaml.rs
workspace/core/tests/: lib.rs
