[package]
name = "bsc-cli"
version = "0.2.0"
edition = "2021"
authors = ["Maxime Tricoire <max.tricoire@gmail.com>"]
readme = "README.md"
description = "A complete CLI client for Beanstalkd"
homepage = "https://github.com/maxleiko/bsc"
repository = "https://github.com/maxleiko/bsc"
keywords = ["beanstalkd", "beanstalk", "client", "cli"]
categories = ["command-line-utilities"]
license = "MIT"

[[bin]]
name = "bsc"
path = "src/main.rs"

[dependencies]
bsc = { version = "0.2.0", path = "../lib" }
clap = { version = "4.1.6", features = ["derive", "env", "wrap_help"] }
eyre = "0.6.8"
serde_json = "1.0.93"
simple-eyre = "0.3.1"
