[package]
name = "bsc"
version = "0.2.0"
edition = "2021"
authors = ["Maxime Tricoire <max.tricoire@gmail.com>"]
readme = "../README.md"
description = "A tiny client library for Beanstalkd"
homepage = "https://github.com/maxleiko/bsc"
repository = "https://github.com/maxleiko/bsc"
keywords = ["beanstalkd", "beanstalk", "client", "cli"]
categories = ["api-bindings"]
license = "MIT"

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
serde_yaml = "0.9.17"
